syntax = "proto3";
package api;
import "google/protobuf/timestamp.proto";

service OIDCAgent {
  rpc Get(GetRequest) returns (GetResponse) {}
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string id_token = 1;
  string access_token = 2;
  google.protobuf.Timestamp token_expiry = 3;
}
